Kubernetes_files/03-backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: earthquake
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ljupcejovanov99580/earthquake-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: earthquake
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
