Kubernetes_files/04-frontend.yaml
# Лекција 08+09 / Chapter 6 (Deployments) + Chapter 7 (Services)
# Frontend исто stateless → Deployment + Service.
# Service-от е NodePort за да можеш веднаш да пристапиш однадвор без Ingress.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: earthquake
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ljupcejovanov99580/earthquake-app-frontend:1.1
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: earthquake
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3005
      targetPort: 3005
      nodePort: 30005   # пристап преку http://<IP-на-кој-било-node>:30005
